# mineru-cloud

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml  test_input.md  test_output.epub  test_output_optimized.epub
.claude/: settings.local.json
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/test/: .flow.ui.oo.json  flow.oo.yaml
flows/test-char-limit/: .flow.ui.oo.json  flow.oo.yaml
flows/test-default-char-limit/: flow.oo.yaml
flows/test-epub/: .flow.ui.oo.json  flow.oo.yaml
flows/test-get-md-enhanced/: flow.oo.yaml
flows/test-pre-detection/: .flow.ui.oo.json  flow.oo.yaml
flows/test/scriptlets/: +scriptlet#1.py
oo-locales/: en.json  zh-CN.json
subflows/pdf-to-epub/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/pdf-to-epub/scriptlets/: +scriptlet#1.py  +scriptlet#3.py
subflows/pdf-to-markdown/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/pdf-to-markdown/scriptlets/: +scriptlet#1.py  +scriptlet#2.py
tasks/get-md-from-folder/: __init__.py  task.oo.yaml
tasks/get-task-result/: __init__.py  task.oo.yaml
tasks/markdown-to-epub/: __init__.py  task.oo.yaml
tasks/markdown-to-epub/themes/: __init__.py  base.py  classic.py  duokan.py  minimal.py  modern.py
tasks/pdf-extract/: __init__.py  task.oo.yaml
tasks/pre-detection_pdf/: __init__.py  task.oo.yaml
