[project]
name = "mineru"
version = "0.1.0"
description = ""
authors = [
    {name = "alwaysmavs",email = "beingswu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pypandoc (>=1.15,<2.0)",
    "pypandoc-binary (>=1.15,<2.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "mineru", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
